Fixed readability with font size changes in the projects page

--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -80,6 +80,10 @@
   align-items: center;
 }
 
+.pitch {
+  font-size: 20px;
+}
+
 @media only screen and (max-width: 600px) {
 
 .projects-page {
